# pylibclang

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  _build_wheels.sh  build.sh  build_llvm.sh  pyproject.toml  setup.py  update_libclang_version.sh
c_src/: _binding.cc.inc  binding.cc  cfg.yaml
pylibclang/: __init__.py  cindex.py
stubs/: build.sh  pyproject.toml
