[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "libclang==16.0.6", # used to get prebuilt libclang
    "importlib_metadata",
]
build-backend = "setuptools.build_meta"

[project]
name = "pylibclang"
description = "A fully featured & always updated python binding for libclang."
readme = "README.md"
keywords = ["pybind11", "libclang", "python"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/edimetia3d/pylibclang"
Documentation = "https://github.com/edimetia3d/pylibclang"
Repository = "https://github.com/edimetia3d/pylibclang"
Changelog = "https://github.com/edimetia3d/pylibclang/releases"

[tool.setuptools.dynamic]
version = { attr = "pylibclang.__VERSION__" }

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["pylibclang*"]