[build-system]
requires = [
    "setuptools>=68.2.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pylibclang-stubs"
description = "Python stubs for pylibclang"
keywords = ["pybind11", "libclang", "python", "stubs"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/edimetia3d/pylibclang"
Documentation = "https://github.com/edimetia3d/pylibclang"
Repository = "https://github.com/edimetia3d/pylibclang"
Changelog = "https://github.com/edimetia3d/pylibclang/releases"

[tool.setuptools.dynamic]
version = { attr = "pylibclang.__VERSION__" }

[tool.setuptools]
zip-safe = false
include-package-data = true
packages = ["pylibclang-stubs"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]
